--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   file_picker: ^10.3.8
   share_plus: ^12.0.1
   path: ^1.9.1
+  youtube_explode_dart: ^3.0.5
+  receive_sharing_intent: ^1.8.1
 
 dev_dependencies:
   flutter_test:
