--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path: ^1.9.1
   youtube_explode_dart: ^3.0.5
   receive_sharing_intent: ^1.8.1
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
